# labs_os

firstLab/: .gitignore  CMakeLists.txt  MyProgram.cpp  SimpleIni.h  child_process.c  child_process.cpp  eCount.cpp  main.c  main.cpp  test.txt  tests.txt
firstLab/child/: CMakeLists.txt  child_process.c  child_process.h
firstLab/include/: BinaryTree.h  Derivative.h  MyNode.h  MyProcess.h
firstLab/src/: BinaryTree.cpp  MyNode.cpp  MyProcess.cpp
